Fix quantity in cart_bottom_sheet

--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -361,5 +361,6 @@
   "address_type": "Address Type",
   "packet": "packet",
   "box": "box",
-  "piece": "piece"
+  "piece": "piece",
+  "wish": "Wish"
 }
