--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -26,7 +26,7 @@
   "specification": "المواصفات",
   "product_variants": "متغيرات المنتج",
   "details": "تفاصيل",
-  "reviews": "المراجعات",
+  "reviews": "التقييمات",
   "questions": "أسئلة مكررة",
   "q": "س",
   "a": "أ",
@@ -237,13 +237,13 @@
   "social_login": "تسجيل الدخول الاجتماعي",
   "shipping_method_added_successfully": "تم اضافة طريقة الشحن بنجاح",
   "i_didnt_receive_the_code": "لم تستلم الرمز؟ حاول مرة اخرى ",
-  "resend_code" :" أعد إرسال الرمز",
+  "resend_code": " أعد إرسال الرمز",
   "please_enter_4_digit_code": "الرجاء إدخال رمز PIN المكون من 4 أرقام",
   "mobile_verification": "التحقق من الهاتف المحمول",
   "mobile_number": "رقم الهاتف المحمول",
   "number_hint": "123456789",
-  "continue" :" استمرار",
-  "enter_phone_number" : "أدخل رقم الهاتف",
+  "continue": " استمرار",
+  "enter_phone_number": "أدخل رقم الهاتف",
   "phone_number_already_exist": "رقم الهاتف موجود بالفعل",
   "new_arrival": "قادم جديد",
   "top_product": "أفضل منتج",
@@ -257,7 +257,7 @@
   "first_name_field_is_required": "حقل الاسم الأول مطلوب",
   "last_name_field_is_required": "حقل الاسم الأخير مطلوب",
   "enter_valid_email_address": "أدخل عنوان بريد إلكتروني صالح",
-  "RUNNING" : "ادارة",
+  "RUNNING": "ادارة",
   "privacy_policy": "سياسة الخصوصية",
   "no_internet_connection": "لا يوجد اتصال بالإنترنت",
   "no_data_found": "لاتوجد بيانات",
@@ -314,7 +314,7 @@
   "refund_status_btn": "حالة رد الأموال",
   "pos_order": "طلب نقاط البيع",
   "approved_note": "ملاحظة معتمدة",
-  "rejected_note" : "ملاحظة مرفوضة",
+  "rejected_note": "ملاحظة مرفوضة",
   "payment_info": "معلومات الدفع",
   "updated_by": "تم التحديث بواسطة",
   "attachment": "مرفق",
@@ -331,7 +331,7 @@
   "delivery_man": "رجل التوصيل",
   "BILLING_ADDRESS_LIST": "قائمة عناوين الفواتير",
   "SHIPPING_ADDRESS_LIST": "قائمة عناوين الشحن",
-  "shipping_address":"عنوان الشحن",
+  "shipping_address": "عنوان الشحن",
   "day": "يوم",
   "hour": "ساعات",
   "min": "دقيقة",
@@ -357,8 +357,8 @@
   "searched_item": "العناصر التي تم البحث عنها",
   "item_found": "تم العثور على العناصر",
   "address_type": "نوع العنوان",
-  "packet":"العبوه",
+  "packet": "العبوه",
   "box": "كرتونه",
-  "piece": "قطعه"
-
+  "piece": "قطعه",
+  "wish": "معجب"
 }
