--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -111,7 +111,7 @@
   "THIS_SECTION_IS_LOCK": "هذا القسم مغلق",
   "REMOVE_ADDRESS": "إزالة العنوان",
   "ORDER_DETAILS": "تفاصيل الطلب",
-  "ORDER_ID": "رقم التعريف الخاص بالطلب:",
+  "ORDER_ID": "رقم الطلب:",
   "SHIPPING_TO": "يشحن إلى",
   "SHIPPING_PARTNER": "اختيار طريقة الشحن",
   "ORDERED_PRODUCT": "المنتج (المنتجات) المطلوبة",
@@ -360,5 +360,7 @@
   "packet": "العبوه",
   "box": "كرتونه",
   "piece": "قطعه",
-  "wish": "معجب"
+  "wish": "معجب",
+  "sum_must_be_greater_than"  : "يجب ان يكون المبلغ الكلى لمجموع مشترياتك اكبر من او يساوى :"
+
 }
