--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -362,5 +362,6 @@
   "packet": "packet",
   "box": "box",
   "piece": "piece",
-  "wish": "Wish"
+  "wish": "Wish",
+  "sum_must_be_greater_than":"Your total price for your cart must be greater than or equals :  "
 }
